<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:iconTint="@color/white"
        android:title="@string/home" />

    <item
        android:id="@+id/menu_shop"
        android:icon="@drawable/ic_shop"
        android:iconTint="@color/white"
        android:title="@string/shop" />

    <item
        android:id="@+id/menu_favorites"
        android:icon="@drawable/ic_favourite"
        android:iconTint="@color/white"
        android:title="@string/favourite" />

    <item
        android:id="@+id/menu_cart"
        android:icon="@drawable/ic_cart"
        android:iconTint="@color/white"
        android:title="@string/cart" />

    <item
        android:id="@+id/menu_account"
        android:icon="@drawable/ic_profile"
        android:iconTint="@color/white"
        android:title="@string/account" />

</menu>