<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@drawable/round_corner_bg_with_green_color"
    android:padding="12dp">

    <ImageView
        android:id="@+id/cart_item_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/cart_item_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toStartOf="@+id/remove_item"
        app:layout_constraintStart_toEndOf="@+id/cart_item_img"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/cart_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/merriweather_variable_font"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/is_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/merriweather_variable_font"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/remove_item"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:contentDescription="@string/remove_from_cart"
        android:padding="6dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_delete"
        android:tint="@color/forest_teal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end|center_vertical"
        android:orientation="horizontal"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cart_item_img"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <ImageButton
            android:id="@+id/increase_count"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/add_quantity"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_add"
            android:tint="@color/forest_teal" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/merriweather_variable_font"
            android:gravity="center_vertical"
            android:text="1"
            android:textColor="@color/black"
            android:textSize="24dp" />

        <ImageButton
            android:id="@+id/decrease_count"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/add_quantity"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_add"
            android:tint="@color/forest_teal" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>